# substrate-node-tutorials-bk

./: Cargo.toml  README.md
node/: Cargo.toml
node/src/: chain_spec.rs  rpc copy.rs  rpc.rs  service.rs
pallets/collectibles/: Cargo.toml
pallets/collectibles/src/: lib.rs
pallets/template/: Cargo.toml
pallets/template/rpc/: Cargo.toml
pallets/template/rpc/runtime-api/: Cargo.toml
pallets/template/rpc/runtime-api/src/: lib.rs
pallets/template/rpc/src/: lib.rs
pallets/template/src/: lib.rs
precompiles/collectibles/: Cargo.toml
precompiles/collectibles/src/: lib.rs
precompiles/utils/: Cargo.toml
precompiles/utils/macro/: Cargo.toml
precompiles/utils/src/data/: xcm.rs
runtime/: Cargo.toml
runtime/src/: lib.rs  precompiles.rs
