[workspace]
members = [
    "node",
    "pallets/collectibles",
    "pallets/template",
    "precompiles/collectibles",
    # "frontier/frame/evm",
    "runtime",
]

[workspace.package]
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"
repository = "https://github.com/paritytech/frontier/"

[profile.release]
panic = "unwind"

[workspace.dependencies]
environmental = { version = "1.1.3", default-features = false }
evm = { version = "0.37.0", default-features = false }
rlp = { version = "0.5", default-features = false }
scale-info = { version = "2.3.1", default-features = false, features = ["derive"] }
scale-codec = { package = "parity-scale-codec", version = "3.2.1", default-features = false, features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# Substrate FRAME
frame-benchmarking = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38", default-features = false }
frame-support = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38", default-features = false }
frame-system = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38", default-features = false }
pallet-timestamp = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38", default-features = false }
pallet-balances = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38", default-features = false }
# Substrate Primitive
sp-core = { version = "7.0.0", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38", default-features = false }
sp-io = { version = "7.0.0", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38", default-features = false }
sp-runtime = { version = "7.0.0", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38", default-features = false }
sp-std = { version = "5.0.0", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38", default-features = false }
# Frontier Primitive
fp-evm = { version = "3.0.0-dev", path = "frontier/primitives/evm", default-features = false }
# fp-evm = { version = "3.0.0-dev", git = "https://github.com/paritytech/frontier", path = "/primitives/evm", default-features = false }
# Frontier FRAME
pallet-evm = { version = "6.0.0-dev", path = "frontier/frame/evm", default-features = false }
pallet-evm-chain-id = { version = "1.0.0-dev", path = "frontier/frame/evm-chain-id", default-features = false }
pallet-evm-test-vector-support = { version = "1.0.0-dev", path = "frontier/frame/evm/test-vector-support" }
pallet-evm-precompile-simple = { version = "2.0.0-dev", path = "frontier/frame/evm/precompile/simple", default-features = false }
# pallet-evm = { version = "6.0.0-dev", git = "https://github.com/paritytech/frontier", default-features = false }
# pallet-evm-precompile-simple = { version = "2.0.0-dev", git = "https://github.com/paritytech/frontier", default-features = false }
# pallet-evm-test-vector-support = { version = "1.0.0-dev", git = "https://github.com/paritytech/frontier" }
