[workspace]
members = [
    "node",
    "pallets/collectibles",
    "pallets/template",
    "precompiles/collectibles",
    # "frontier/frame/evm",
    "runtime",
]

[workspace.package]
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"
repository = "https://github.com/paritytech/frontier/"

[profile.release]
panic = "unwind"

[workspace.dependencies]
environmental = { version = "1.1.3", default-features = false }
ethereum = { version = "0.14.0", default-features = false }
ethereum-types = { version = "0.14.1", default-features = false }
evm = { version = "0.37.0", default-features = false }
jsonrpsee = "0.16.2"
rlp = { version = "0.5", default-features = false }
scale-info = { version = "2.3.1", default-features = false, features = ["derive"] }
scale-codec = { package = "parity-scale-codec", version = "3.2.1", default-features = false, features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
kvdb-rocksdb = "0.17.0"
parity-db = "0.4.2"
libsecp256k1 = "0.7.1"

# Substrate FRAME
frame-benchmarking = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38", default-features = false }
frame-support = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38", default-features = false }
frame-system = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38", default-features = false }
pallet-timestamp = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38", default-features = false }
pallet-balances = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38", default-features = false }

# Substrate client
sc-block-builder = { version = "0.10.0-dev", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38" }
sc-client-db = { version = "0.10.0-dev", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38" }
sc-client-api = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38" }
sc-network = { version = "0.10.0-dev", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38" }
sc-network-common = { version = "0.10.0-dev", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38" }
sc-rpc = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38" }
sc-service = { version = "0.10.0-dev", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38" }
sc-transaction-pool = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38" }
sc-transaction-pool-api = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38" }

# Substrate Primitive
sp-api = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38", default-features = false }
sp-block-builder = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38", default-features = false }
sp-blockchain = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38" }
sp-consensus = { version = "0.10.0-dev", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38" }
sp-core = { version = "7.0.0", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38", default-features = false }
sp-database = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38" }
sp-io = { version = "7.0.0", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38", default-features = false }
sp-runtime = { version = "7.0.0", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38", default-features = false }
sp-std = { version = "5.0.0", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38", default-features = false }
sp-storage = { version = "7.0.0", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38", default-features = false }

# Substrate utils
substrate-test-runtime-client = { version = "2.0.0", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38" }
prometheus-endpoint = { package = "substrate-prometheus-endpoint", version = "0.10.0-dev", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38" }

# Frontier client
fc-db = { version = "2.0.0-dev", path = "frontier/client/db" }
fc-rpc-core = { version = "1.1.0-dev", path = "frontier/client/rpc-core" }

# Frontier primitives
fp-consensus = { version = "2.0.0-dev", path = "frontier/primitives/consensus", default-features = false }
fp-ethereum = { version = "1.0.0-dev", path = "frontier/primitives/ethereum", default-features = false }
fp-evm = { version = "3.0.0-dev", path = "frontier/primitives/evm", default-features = false }
fp-rpc = { version = "3.0.0-dev", path = "frontier/primitives/rpc", default-features = false }
fp-self-contained = { version = "1.0.0-dev", path = "frontier/primitives/self-contained", default-features = false }
fp-storage = { version = "2.0.0", path = "frontier/primitives/storage", default-features = false }

# Frontier FRAME
pallet-evm = { version = "6.0.0-dev", path = "frontier/frame/evm", default-features = false }
pallet-ethereum = { version = "4.0.0-dev", path = "frontier/frame/ethereum", default-features = false }
pallet-evm-chain-id = { version = "1.0.0-dev", path = "frontier/frame/evm-chain-id", default-features = false }
pallet-evm-test-vector-support = { version = "1.0.0-dev", path = "frontier/frame/evm/test-vector-support" }
pallet-evm-precompile-simple = { version = "2.0.0-dev", path = "frontier/frame/evm/precompile/simple", default-features = false }
# pallet-evm = { version = "6.0.0-dev", git = "https://github.com/paritytech/frontier", default-features = false }
# pallet-evm-precompile-simple = { version = "2.0.0-dev", git = "https://github.com/paritytech/frontier", default-features = false }
# pallet-evm-test-vector-support = { version = "1.0.0-dev", git = "https://github.com/paritytech/frontier" }
