[package]
name = "pallet-evm-precompile-collectibles"
version = "1.0.0-dev"
license = "Apache-2.0"
description = "collectibles precompiles for EVM pallet."
authors = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }

[dependencies]
# frame-support = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38", default-features = false }
frame-support = { workspace = true }
# num = { version = "0.4", default-features = false, features = ["alloc"] }
# Frontier
fp-evm = { workspace = true }
pallet-evm = { workspace = true }
sp-std = { workspace = true }

precompile-utils = { path = "../utils", default-features = false }

pallet-collectibles = { path = "../../pallets/collectibles", default-features = false }

[dev-dependencies]
# hex = "0.4.3"
# Frontier
# pallet-evm-test-vector-support = { workspace = true }

[features]
default = ["std"]
std = [
	# "num/std",
	# Frontier
	"fp-evm/std",
	"pallet-evm/std",
	"frame-support/std",
	"sp-std/std",
]
